# ricibrowser

./: .gitignore  ARCHITECTURE.md  BROWSER_ENGINE.md  README.md  pyproject.toml
scripts/: install_lightpanda.sh
src/ricibrowser/: __init__.py  captcha.py  cdp_client.py  chrome_launcher.py  config.py  cookie_jar.py  engine.py  fingerprint.py  geolocation.py  headers.py  input.py  lightpanda.py  network.py  proxy_integration.py  session.py  stealth.py  utils.py  wait.py
src/ricibrowser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cdp_client.py  test_cookie_jar.py  test_engine.py  test_extensions.py  test_utils.py  test_wait.py
