[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ricibrowser"
version = "0.2.0"
description = "A lightweight two-engine browser automation module built on CDP — no Playwright, no Puppeteer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Riciplay", email = "dev@riciplay.xyz"},
]
keywords = ["cdp", "browser-automation", "headless", "chrome-devtools-protocol", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Security",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/Zaidux/ricibrowser"
Repository = "https://github.com/Zaidux/ricibrowser"
Documentation = "https://github.com/Zaidux/ricibrowser/blob/main/ARCHITECTURE.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ricibrowser = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
